infra/2-eks-cluster-stage/k8-manifests/base/np-default-policies.yaml
### Rule Description
##  Deny  all communications in develop namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: ${ENVIRONMENT}
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
### Rule Description
##  Allow egress traffic to CoreDNS

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-coredns
  namespace: ${ENVIRONMENT}
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53

---
### Rule Description
##  Allow egress traffic to HTTPs
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-https
  namespace: ${ENVIRONMENT}
spec:
  podSelector: 
    matchLabels:
      tier: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0  
    ports:
    - protocol: TCP
      port: 443
